wpp z-index bug

--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ a:visited {
 	transition: all .3s cubic-bezier(0, 0, .5, 1);
 	font-family: Arial, Helvetica, sans-serif;
 	font-weight: bold;
+	z-index: 2;
 }
 
 .wpp img {
